<resources>
    <string name="app_name">Photo Finish Camera</string>
    <string name="action_settings">Settings</string>
    <string name="action_popup">Popup settings</string>
    <string name="intro_ok">OK (This message won\'t show again)</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="choose_save_location">Choose save location:</string>
    <string name="clear_folder_history">Clear folder history</string>
    <string name="clear_folder_history_question">Clear folder history?</string>
    <string name="choose_another_folder">Choose another folder</string>
    <string name="changed_save_location">Changed save location to:</string>
    <string name="stopped_recording_video">Stopped recording video</string>
    <string name="repeats_to_go">repeats to go</string>
    <string name="failed_to_reconnect_camera">Failed to reconnect to camera</string>
    <string name="video_may_be_corrupted">Error, video file may be corrupted</string>
    <string name="not_supported">not supported on your device</string>
    <string name="video_error_unknown">Unknown error, video halted</string>
    <string name="video_error_server_died">Server died, video halted</string>
    <string name="video_max_duration">Video reached max duration</string>
    <string name="video_max_filesize">Video reached max file size</string>
    <string name="exposure_compensation">Exposure compensation</string>
    <string name="fps">FPS</string>
    <string name="focus_distance">Focus distance</string>
    <string name="infinite">Infinite</string>
    <string name="front_camera">Front Camera</string>
    <string name="back_camera">Back Camera</string>
    <string name="photo">Photo</string>
    <string name="video">Video</string>
    <string name="exposure_locked">Exposure locked</string>
    <string name="exposure_unlocked">Exposure unlocked</string>
    <string name="cancelled_timer">Cancelled timer</string>
    <string name="cancelled_repeat_mode">Cancelled repeat mode</string>
    <string name="started_timer">Started timer</string>
    <string name="failed_to_save_video">Failed to save video file</string>
    <string name="failed_to_record_video">Failed to record video</string>
    <string name="started_recording_video">Started recording video</string>
    <string name="sorry">Sorry</string>
    <string name="failed_to_save_photo">Failed to save photo</string>
    <string name="failed_to_save_photo_raw">Failed to save RAW photo</string>
    <string name="failed_to_auto_stabilise">Failed to auto-level</string>
    <string name="failed_to_start_camera_preview">Failed to start camera preview</string>
    <string name="taking_photo">Taking photo</string>
    <string name="failed_to_take_picture">Failed to take picture</string>
    <string name="location_not_available">GPS location not available</string>
    <string name="photo_deleted">Photo deleted</string>
    <string name="no_gallery_app">No gallery app available</string>
    <string name="screen_is_locked">Screen is locked\nswipe the screen to unlock</string>
    <string name="unlocked">Unlocked</string>
    <string name="auto_stabilise_not_supported">Sorry, auto-level not supported\non this device</string>
    <string name="audio_disabled">Audio disabled</string>
    <string name="max_duration">Max duration</string>
    <string name="color_effect">Color effect</string>
    <string name="scene_mode">Scene mode</string>
    <string name="white_balance">White balance</string>
    <string name="angle">Angle</string>
    <string name="direction">Direction</string>
    <string name="failed_to_open_camera_1">FAILED TO OPEN CAMERA.</string>
    <string name="failed_to_open_camera_2">CAMERA MAY BE IN USE</string>
    <string name="failed_to_open_camera_3">BY ANOTHER APPLICATION?</string>
    <string name="iso">ISO</string>
    <string name="zoom">Zoom</string>
    <string name="free_memory">Free</string>
    <string name="screen_lock_message_1">[LOCKED:</string>
    <string name="screen_lock_message_2">Swipe to unlock]</string>
    <string name="failed_to_stamp">Failed to stamp info to photo</string>
    <string name="metres_abbreviation">m</string>
    <string name="preference_category_camera_effects">Camera Effects</string>
    <string name="preference_auto_stabilise">Auto-level</string>
    <string name="preference_auto_stabilise_summary">Images will be rotated so they are automatically level (photos only) (slower to take photos, and may fail on devices with too low memory)</string>
    <string name="preference_color_effect">Apply a color effect</string>
    <string name="preference_color_effect_summary">Applies the selected color effect to the photo</string>
    <string name="preference_scene_mode">Apply a scene mode</string>
    <string name="preference_scene_mode_summary">Optimise the photo for different scenes</string>
    <string name="preference_white_balance">Set the white balance</string>
    <string name="preference_white_balance_summary">Choose a setting to adjust the white balance</string>
    <string name="preference_iso">Set the ISO</string>
    <string name="preference_iso_summary">A higher value means more sensitive to light (may not work on some devices)</string>
    <string name="preference_exposure">Set the exposure compensation</string>
    <string name="preference_exposure_summary">Set to 0 for the default exposure compensation</string>
    <string name="preference_lock_orientation">Lock photo/video orientation</string>
    <string name="preference_lock_orientation_summary">If set, the orientation of the device will be ignored, and the orientation of the photo/video will be with respect to the specified orientation\n%s</string>
    <string name="preference_face_detection">Face detection</string>
    <string name="preference_face_detection_summary">Use face detection instead of focus areas</string>
    <string name="preference_category_camera_controls">Camera Controls</string>
    <string name="preference_timer">Timer</string>
    <string name="preference_timer_beep">Timer beep</string>
    <string name="preference_timer_beep_summary">Beep when timer is counting down or for repeat mode delay</string>
    <string name="preference_timer_speak">Voice timer countdown</string>
    <string name="preference_timer_speak_summary">Speak the countdown for timer or repeat mode delay (from 60 seconds)</string>
    <string name="preference_burst_mode">Repeat</string>
    <string name="preference_burst_interval">Repeat mode interval</string>
    <string name="preference_screen_camera_controls_more">More camera controls…</string>
    <string name="preference_touch_capture">Touch to capture</string>
    <string name="preference_touch_capture_summary">Take a photo or record video just by touching or double-tapping the preview\n%s</string>
    <string name="preference_pause_preview">Pause after taking photo</string>
    <string name="preference_pause_preview_summary">Pause the screen after taking a photo, with the option to share or delete the photo</string>
    <string name="preference_shutter_sound">Shutter sound</string>
    <string name="preference_shutter_sound_summary">Play a sound when taking a photo</string>
    <string name="preference_volume_keys">Volume keys</string>
    <string name="preference_audio_control">Audio control options</string>
    <string name="preference_audio_noise_control_sensitivity">Audio control sensitivity</string>
    <string name="preference_audio_noise_control_sensitivity_summary">Noise level sensitivity for audio (loud noise) option\n%s</string>
    <string name="preference_save_location">Save location</string>
    <string name="preference_save_location_summary">Folder to save the photo/video files in</string>
    <string name="preference_using_saf" translatable="false">Storage Access Framework</string>
    <string name="preference_using_saf_summary">Whether to use Storage Access Framework for saving photos and videos. This should be enabled to allow saving to external SD cards. On Android 10+ this option must be enabled if you want to save in a folder outside of DCIM.</string>
    <string name="preference_save_photo_prefix">Save photo prefix</string>
    <string name="preference_save_photo_prefix_summary">The prefix to use for the save filenames for photos</string>
    <string name="preference_save_video_prefix">Save video prefix</string>
    <string name="preference_save_video_prefix_summary">The prefix to use for the save filenames for videos</string>
    <string name="preference_save_zulu_time">Time format for filename</string>
    <string name="preference_save_include_milliseconds">Use milliseconds in filename</string>
    <string name="preference_save_include_milliseconds_summary">If enabled, filenames will include milliseconds</string>
    <string name="preference_show_when_locked">Show camera when locked</string>
    <string name="preference_show_when_locked_summary">If enabled, Photo Finish Camera will still show above any lockscreen (you\'ll still have to unlock to access Settings, Gallery etc)</string>
    <string name="preference_web_remote_category">Wi-Fi/Web remote control</string>
    <string name="preference_enable_web_remote">Enable Wi-Fi/Web remote control</string>
    <string name="preference_enable_web_remote_summary">Control the camera from a browser on another device connected to the same Wi-Fi or hotspot.</string>
    <string name="preference_web_remote_status">Web remote address</string>
    <string name="preference_web_remote_status_summary">Enable Wi-Fi/Web remote control to show the address and PIN.</string>
    <string name="preference_ble_remote_category">Bluetooth LE remote control</string>
    <string name="preference_enable_remote">Enable Bluetooth LE remote control</string>
    <string name="preference_enable_remote_summary">Enable Bluetooth LE (BLE) remote control devices</string>
    <string name="preference_remote_type">Remote device type</string>
    <string name="preference_remote_disconnect_screen_dim">Dim screen if remote disconnects</string>
    <string name="preference_remote_disconnect_screen_dim_summary">Hint: set default brightness to minimum level before starting Photo Finish Camera.</string>
    <string name="preference_water_type">Use Saltwater for depth calculations</string>
    <string name="preference_water_type_summary">For underwater housings, improves accuracy if correct water type is selected.</string>
    <string name="preference_select_remote">Select remote device</string>
    <string name="video_frame">Video frame</string>
    <string name="previous_frame">Previous frame</string>
    <string name="next_frame">Next frame</string>
    <string name="play_pause">Play/Pause</string>
    <string name="launcher_camera_button"> Camera</string>
    <string name="launcher_viewer_button">Frame-by-frame video player</string>
    <string name="launcher_subscription_button">Unlock Subscription</string>
    <string name="subscription_offer_launch"></string>
    <string name="subscription_screen_title">Unlock Pro Features</string>
    <string name="subscription_features_title">What&#8217;s included:</string>
    <string name="subscription_feature_1">✓  Frame-by-frame video player</string>
    <string name="subscription_feature_2">✓  Manual ISO &amp; shutter speed control for video</string>
    <string name="subscription_feature_3">✓  Slow-motion at 1/8× and 1/4× speed</string>
    <string name="subscription_feature_4">✓  Ad-free after purchase</string>
    <string name="subscription_feature_5">✓  All future Pro features</string>
    <string name="subscription_buy_monthly">Monthly plan</string>
    <string name="subscription_buy_yearly">Yearly plan</string>
    <string name="subscription_buy_lifetime">Lifetime unlock</string>
    <string name="subscription_status_loading">Connecting to Google Play Billing...</string>
    <string name="admob_banner_ad_unit_id" translatable="false">ca-app-pub-7252190728467791/1702598164</string>
</resources>