<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory
        android:title="@string/preference_web_remote_category"
        />

    <SwitchPreference
        android:key="preference_enable_web_remote"
        android:title="@string/preference_enable_web_remote"
        android:summary="@string/preference_enable_web_remote_summary"
        android:defaultValue="false"
        />

    <Preference
        android:key="preference_web_remote_status"
        android:title="@string/preference_web_remote_status"
        android:summary="@string/preference_web_remote_status_summary"
        android:dependency="preference_enable_web_remote"
        />

    <PreferenceCategory
        android:title="@string/preference_ble_remote_category"
        />

    <SwitchPreference
        android:key="preference_enable_remote"
        android:title="@string/preference_enable_remote"
        android:summary="@string/preference_enable_remote_summary"
        android:defaultValue="false"
        />

    <ListPreference
        android:key="preference_remote_type"
        android:title="@string/preference_remote_type"
        android:summary="%s"
        android:entries="@array/preference_remote_type_entries"
        android:entryValues="@array/preference_remote_type_values"
        android:defaultValue="preference_remote_type_kraken"
        android:dependency="preference_enable_remote"
        />

    <PreferenceScreen
        android:key="preference_remote_device_name"
        android:title="@string/preference_select_remote"
        android:dependency="preference_enable_remote"
        >

        <intent
            android:targetPackage="com.myprotiming.photofinishcamera"
            android:targetClass="net.sourceforge.opencamera.remotecontrol.DeviceScanner"
            />

    </PreferenceScreen>

    <SwitchPreference
        android:key="preference_remote_disconnect_screen_dim"
        android:title="@string/preference_remote_disconnect_screen_dim"
        android:summary="@string/preference_remote_disconnect_screen_dim_summary"
        android:defaultValue="false"
        android:dependency="preference_enable_remote"
        />

    <SwitchPreference
        android:key="preference_water_type"
        android:title="@string/preference_water_type"
        android:summary="@string/preference_water_type_summary"
        android:defaultValue="true"
        android:dependency="preference_enable_remote"
        />

</PreferenceScreen>
